syntax = "proto3";

package auth;

option go_package = "./src/infrastructure/handler/grpc/auth/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register

message RegisterRequest {
  string  name = 1;
  string  userName = 2;
  string  email = 3;
  string  password = 4;
  string  role = 5;
}

message RegisterResponse {
  int64 userId = 1;
}

// Login

message LoginRequest {
  string  userName = 1;
  string  password = 2;
}

message LoginResponse {
  string  token = 1;
  int64   userId = 2;
  string  userName = 3;
  string  role = 4;
}

// Validate

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int64   userId = 1;
  string  userName = 2;
  string  role = 3;
}
